# parth-agent

./: .gitignore  CLAUDE.md  MANUAL.md  PARTH.md  README.md  WINDOWS_BUILD.md  WORKBOOK.md  agent.py  build.ps1  index.html  parth-agent-flow.html  pyproject.toml  requirements.txt
.github/workflows/: windows-installer.yml
.parth/: README.md
installer/: README.md  parth.iss  parth.spec
parth/: __init__.py  __main__.py  bootstrap.py  cli.py  console.py  install_sync.py  main.py  path_resolve.py  project_context.py  prompt_attachments.py  prompt_refs.py  state.py  updater.py  updater_installer.py
scripts/: _verify_tui.py  install  install-global  test-install  test-opus-48
tests/: test_ask_user_question.py  test_cli_web_args.py  test_client_codex_fallback.py  test_codex_oauth.py  test_commands_catalog.py  test_console_mux.py  test_context_bundle.py  test_install_sync.py  test_lazy_context_loading.py  test_mcp_scope.py  test_memory_save_arguments.py  test_message_heal.py  test_model_persistence.py  test_model_picker_rows.py  test_model_provider_normalization.py  test_model_sources.py  test_multi_edit_tool_runs.py  test_oauth.py  test_oauth_providers.py  test_opencode_thinking_options.py  test_opencode_usage.py  test_opus_48.py  test_parth_agent.py  test_path_resolve.py  test_pin_context.py  test_prompt_attachments.py  test_prompt_paste.py  test_prompt_refs.py  test_qr_ascii.py  test_shell.py  test_startup.py  test_system_identity.py  test_tool_display.py  test_tool_repair.py  test_tool_router.py  test_updater.py  test_upgrade.py  test_web_server.py
(+205 files in other folders)
