[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parth-agent"
dynamic = ["version"]
description = "Parth terminal agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.0",
    "rich>=13",
    "textual>=0.80",
    "pypdf>=4.0",
    "openpyxl>=3.0",
    "mcp>=1.0.0",
    "qrcode>=7.4",
    "pyperclip>=1.8",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
build-windows = [
    "pyinstaller>=6.0",
]

[tool.setuptools.dynamic]
version = {attr = "parth.constants.models.VERSION"}

[project.scripts]
parth = "parth.cli:main"

[tool.setuptools.packages.find]
include = ["parth*"]

[tool.setuptools.package-data]
"parth.web" = ["ui.html", "static/**/*"]
